--- a/deno.json
+++ b/deno.json
@@ -22,9 +22,10 @@
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "edix": "npm:edix@^0.1.0",
+    "lucide-preact": "npm:lucide-preact@^0.539.0",
     "nanoid": "npm:nanoid@^5.1.5",
-    "preact": "https://esm.sh/preact@10.22.0",
-    "preact/": "https://esm.sh/preact@10.22.0/",
+    "preact": "npm:preact@^10.27.0",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "simple-icons": "npm:simple-icons@^15.10.0",
